edit con string

--- a/TravelAdviser/appsettings.json
+++ b/TravelAdviser/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQL6032.site4now.net,1433;Initial Catalog=db_aa88a6_traveladviser;User Id=db_aa88a6_traveladviser_admin;Password=a123456789;"
+    "DefaultConnection": "workstation id=TravelAdviser.mssql.somee.com;packet size=4096;user id=travelAdviseraa_SQLLogin_1;pwd=l1fjs81sys;data source=TravelAdviser.mssql.somee.com;persist security info=False;initial catalog=TravelAdviser;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
